fabric/support/test/tests/construct_runtime_ui/more_than_256_modules.stderr
error: Module index doesn't fit into u8, index is 256
  --> $DIR/more_than_256_modules.rs:10:3
   |
10 |         Noble256: noble256::{},
   |         ^^^^^^^^^
