fabric/support/test/tests/construct_runtime_ui/more_than_256_modules.rs
use fabric_support::construct_runtime;

construct_runtime! {
	pub enum Runtime where
		UncheckedExtrinsic = UncheckedExtrinsic,
		Block = Block,
		NodeBlock = Block,
	{
		System: system::{} = 255,
		Noble256: noble256::{},
	}
}

fn main() {}
